[gd_scene load_steps=6 format=3 uid="uid://dstbigohnjky2"]

[ext_resource type="Script" path="res://ui.gd" id="1_4m5mi"]
[ext_resource type="Texture2D" uid="uid://y8c1fl4knro6" path="res://illustration-of-a-stone-with-a-cartoon-style-png.png" id="2_5285a"]
[ext_resource type="Texture2D" uid="uid://bmyb54mml6y07" path="res://pngtree-cartoon-nail-tools-png-image_6571282.png" id="3_mlnb2"]
[ext_resource type="Texture2D" uid="uid://c08oa72u2apcw" path="res://wooden-badge-banner-wooden-plank-plate-png.png" id="4_37sel"]
[ext_resource type="Script" path="res://build_menu.gd" id="5_hucwq"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_4m5mi")

[node name="ResourceBox" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 204.0
offset_bottom = 112.0
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="ResourceBox"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="ResourceBox/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="StoneInventory" type="TextureRect" parent="ResourceBox/HBoxContainer"]
custom_minimum_size = Vector2(500, 450)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_5285a")

[node name="StoneCounter" type="Label" parent="ResourceBox/HBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.884314, 3.34509e-06, 3.85046e-07, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 35
theme_override_constants/shadow_outline_size = 65
theme_override_font_sizes/font_size = 200
text = "0"
vertical_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="ResourceBox"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="ResourceBox/HBoxContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="NailsInventory" type="TextureRect" parent="ResourceBox/HBoxContainer2"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
texture = ExtResource("3_mlnb2")

[node name="NailsCounter" type="Label" parent="ResourceBox/HBoxContainer2"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.884314, 3.34509e-06, 3.85046e-07, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 35
theme_override_constants/shadow_outline_size = 65
theme_override_font_sizes/font_size = 200
text = "0"
vertical_alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="ResourceBox"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="ResourceBox/HBoxContainer3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="WoodInventory" type="TextureRect" parent="ResourceBox/HBoxContainer3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_37sel")

[node name="WoodCounter" type="Label" parent="ResourceBox/HBoxContainer3"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.884314, 3.34509e-06, 3.85046e-07, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 35
theme_override_constants/shadow_outline_size = 65
theme_override_font_sizes/font_size = 200
text = "0"
vertical_alignment = 2

[node name="BuildMenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_hucwq")

[node name="ToggleMenu" type="Button" parent="BuildMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12139.0
offset_top = 112.0
offset_right = 13248.0
offset_bottom = 353.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 100
theme_override_font_sizes/font_size = 200
text = "Build Menu"
icon_alignment = 2

[node name="TabContainer" type="TabContainer" parent="BuildMenu"]
custom_minimum_size = Vector2(4000, 8000)
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 7368.0
offset_top = 739.0
offset_right = 13286.0
offset_bottom = 8739.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 75
theme_override_font_sizes/font_size = 250
current_tab = 1
clip_tabs = false
use_hidden_tabs_for_min_size = true

[node name="Roads" type="VBoxContainer" parent="BuildMenu/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="RoadCost" type="Label" parent="BuildMenu/TabContainer/Roads"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_font_sizes/font_size = 200
text = "Cost: Stone x1"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="BuildMenu/TabContainer/Roads"]
layout_mode = 2
columns = 3

[node name="Fences" type="VBoxContainer" parent="BuildMenu/TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="FenceCost" type="Label" parent="BuildMenu/TabContainer/Fences"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_font_sizes/font_size = 200
text = "Cost: Wood x1"
horizontal_alignment = 1

[node name="GridContainer2" type="GridContainer" parent="BuildMenu/TabContainer/Fences"]
layout_mode = 2

[node name="Nature" type="VBoxContainer" parent="BuildMenu/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="NatureCost" type="Label" parent="BuildMenu/TabContainer/Nature"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_font_sizes/font_size = 200
text = "you'd think a rock would cost a rock but we're nice so it's free 
(you're welcome)"
horizontal_alignment = 1

[node name="GridContainer3" type="GridContainer" parent="BuildMenu/TabContainer/Nature"]
layout_mode = 2

[node name="Decor" type="VBoxContainer" parent="BuildMenu/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="DecorCost" type="Label" parent="BuildMenu/TabContainer/Decor"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_font_sizes/font_size = 200
text = "Cost: Wood x1, Nails x1"
horizontal_alignment = 1

[node name="GridContainer4" type="GridContainer" parent="BuildMenu/TabContainer/Decor"]
layout_mode = 2

[node name="Buildings" type="VBoxContainer" parent="BuildMenu/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="BuildingCost" type="Label" parent="BuildMenu/TabContainer/Buildings"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_font_sizes/font_size = 200
text = "Cost: Stone x2, Wood x2, Nails x2"
horizontal_alignment = 1

[node name="GridContainer5" type="GridContainer" parent="BuildMenu/TabContainer/Buildings"]
layout_mode = 2

[node name="Node2D" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="Node2D"]
